[2.2.3 인가 프로세스를 돕는 클래스들] ExceptionTranslationFilter, RequestCacheAwareFilter flow 정리 TODO: [4.1 WebIgnore] 단순 설정 완료

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -104,6 +104,37 @@
         - formLogin에 접근하기 위한 url의 접근 권한 all 설정
 ```
 
+```
+/* 인가 정책 */
+http
+        .authorizeRequests()
+        .anyRequest().authenticated();
+
+/* 인증 정책 */
+http
+        .formLogin()
+        .defaultSuccessUrl("/")
+        .failureUrl("/login")
+        .usernameParameter("userId")
+        .passwordParameter("passwd")
+        .loginProcessingUrl("/login_proc")
+        .successHandler(new AuthenticationSuccessHandler() {
+            @Override
+            public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
+                System.out.println("authentication : " + authentication.getName());
+                response.sendRedirect("/");
+            }
+        })
+        .failureHandler(new AuthenticationFailureHandler() {
+            @Override
+            public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
+                System.out.println("exception" + exception.getMessage());
+                response.sendRedirect("/login");
+            }
+        })
+        .permitAll();
+```
+
 ### 2.1.6. UserPasswordAuthenticationFilter
 - Authentication
     - 인증을 처리하는 필터
@@ -121,6 +152,65 @@
     - 인증 토큰 삭제
     - 쿠키정보 삭제,
     - 로그인 페이지로 리다이렉트
+
+```
+// 인가 정책
+http
+        .authorizeRequests()
+        .anyRequest().authenticated();
+// 인증 정책
+http
+        .formLogin()
+        .defaultSuccessUrl("/")
+        .failureUrl("/login")
+        .usernameParameter("userId")
+        .passwordParameter("passwd")
+        .loginProcessingUrl("/login_proc")
+
+        /* AuthenticationSuccessHandler */
+        .successHandler(new AuthenticationSuccessHandler() {
+            @Override
+            public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
+                System.out.println("authentication : " + authentication.getName());
+                response.sendRedirect("/");
+            }
+        })
+
+        /* AuthenticationFailureHandler */
+        .failureHandler(new AuthenticationFailureHandler() {
+            @Override
+            public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
+                System.out.println("exception" + exception.getMessage());
+                response.sendRedirect("/login");
+            }
+        })
+        .permitAll();
+http
+        .logout()
+        /* GET, POST 가능하나 POST가 Default */
+        .logoutUrl("/logout")
+        .logoutSuccessUrl("/login")
+
+        /* LogoutHandler */
+        .addLogoutHandler(new LogoutHandler() {
+            @Override
+            public void logout(HttpServletRequest request, HttpServletResponse response, Authentication authentication) {
+                HttpSession session = request.getSession();
+                session.invalidate();
+            }
+        })
+
+        /* LogoutSuccessHandler */
+        .logoutSuccessHandler(new LogoutSuccessHandler() {
+            @Override
+            public void onLogoutSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
+                response.sendRedirect("/login");
+            }
+        })
+        /* 쿠키명 */
+        .deleteCookies("remember-me")
+        ;
+```
 
 ### 2.1.8. Remember Me 인증
 
@@ -151,6 +241,26 @@
 
 ![RememberMe Flow](/docs/img/flow/flow_RememberMe.png)
 
+```
+/* 인증 API */
+http
+    .authorizeRequests()
+    .anyRequest().authenticated();
+
+http
+    .formLogin();
+
+http
+    /* 인가 API */
+    .rememberMe()
+    .rememberMeParameter("remember") // 기본 파라미터 명 -> "remember-me"
+    .tokenValiditySeconds(3600) // 만료시간 default 14일
+    .alwaysRemember(true) // remember me  기능이 활성화되지 않아도 항상 실행
+    /* user 계정 확인 메서드 */
+    .userDetailsService(userDetailsService)
+    ;
+```
+
 ### 2.1.9. RememberMeAuthenticationFilter
 
 - remember-me 발급 플로우
@@ -174,20 +284,45 @@
 
 ![AnonymousFilter](/docs/img/flow/flow_AnonymousFilter.png)
 
+
+```
+/* 인증 API */
+http
+    .authorizeRequests()
+    .anyRequest().authenticated();
+
+http
+    .formLogin();
+
+http
+    /* 인가 API */
+    .anonymous()
+    ;
+```
+
 ### 2.1.11. 동시적 세션 제어 전략
 - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
     - 이전 세션 종료 방식
     - 이후 세션 접근 거부 방식
 
 ```
-/* 세션 관리 */
-.sessionManagement()
-    .maximumSessions(1) // 최대 허용 가능 세션 수 (-1: 무제한)
-    .maxSessionsPreventsLogin(true) // 동시 로그인 차단 (default: false)
-    .expiredUrl("/login") // 세션 만료 시 페이지 이동
-/* 세션 관리 */
-.sessionManagement()
-    .invalidSessionUrl("/login") // 세션 유효하지 않는 경우 페이지 이동
+http
+    .authorizeRequests()
+    .anyRequest().authenticated();
+
+http
+    .formLogin();
+
+http
+    /* 세션 관리 */
+    .sessionManagement()
+        .maximumSessions(1) // 최대 허용 가능 세션 수 (-1: 무제한)
+        .maxSessionsPreventsLogin(true) // 동시 로그인 차단 (default: false)
+        .expiredUrl("/login") // 세션 만료 시 페이지 이동
+
+    /* 세션 관리 */
+    .sessionManagement()
+        .invalidSessionUrl("/login") // 세션 유효하지 않는 경우 페이지 이동
 ```
 
 ### 2.1.12. 세션 고정 보호
@@ -199,14 +334,14 @@
 .sessionFixation()
 
     /* 세센 고정 보호를 사용하지 않는 경우 위와 같은 문제가 발생할 수 있음 */
-     .none()
+     //.none()
 
     /* Servlet 3.1 미만 버전 일 때 default 값 */
     /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
-     .migrateSession()
+     //.migrateSession()
     
     /* 새로운 인증 세션으로 변경하는 방법 */
-     .newSession()
+     //.newSession()
 
     /* Servlet 3.1 이상 버전 일 때 default 값 */
     /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
@@ -391,6 +526,7 @@ protected void configure(HttpSecurity http) throws Exception {
 
             .anyRequest()
             .authenticated()
+    ;
 ```
 
 ### 2.2.3 인가 프로세스를 돕는 클래스들
@@ -440,7 +576,7 @@ http
 /* 인가 예외시 실행 handler 설정 */
 http
     .exceptionHandling()
-    /* 인가 프로세스 전 요청(request) 값을 갖고 있는 EntryPoint 클래스 (시나리오 2번 수행 시 주석처리 필요) */
+    /* 인가 프로세스 전 요청(request) 값을 갖고 있는 EntryPoint 클래스 (시나리오 3번 수행 시 주석처리 필요) */
     .authenticationEntryPoint(new AuthenticationEntryPoint() {
         @Override
         public void commence(HttpServletRequest request, HttpServletResponse response, AuthenticationException authException) throws IOException, ServletException {
