[3.3 Authentication] Authentication 생성 및 SecurityContextHolder에 저장되는 flow 정리 TODO: [4.2 PasswordEncoder] 진행 필요

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -100,6 +100,24 @@ public class SecuritySubConfig extends WebSecurityConfigurerAdapter {
 
 ## 3.3. Authentication
 
+- Authentication
+    - 사용자의 인증 정보를 저장하는 토큰 개념
+        - 인증 시 Id와 Password를 담고 인증 검증을 위해 전달되어 사용된다.
+        - 인증 후 최종 적으로 인증 결과(User, 권한정보)를 담고 SecurityContext에 저장되어 전역적으로 참조가 가능하다.
+
+```
+Authentication authentication = SecurityContextHolder.getContext().getAuthentication()
+```
+
+- 구조
+    - principal: 사용자 아이디 혹은 User 객체를 저장
+    - credential: 사용자 비밀번호
+    - authorities: 인증된 사용자의 권한 목록
+    - details: 인증 부가 정보
+    - Authenticated: 인증 여부
+
+![Authentication 인증 Flow](/docs/img/flow/flow_Authentication.png)
+
 ## 3.4. SecurityContextHolder, SecurityContext
 
 ### 3.4.1. SecurityContextHolder
