--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -142,6 +142,12 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 ## 4.3. Form 인증
 
 ### 4.3.1. User 등록 / PasswordEncoder
+- PasswordEncoder
+    - 비밀번호를 안전하게 암호화 하도록 제공
+    - SpringSecurity 5.0 이전에는 기본 PasswordEncoder 가 평문을 지원하는 NoOpPasswordEncoder (현재는 Deprecated)
+
+- 생성
+    
 ### 4.3.2. CustomUserDetailsService
 ### 4.3.3. CustomAuthenticationProvider
 ### 4.3.4. Custom Login Form Page
