[3.3 Authentication] Authentication 생성 및 SecurityContextHolder에 저장되는 flow 정리 TODO: [4.2 PasswordEncoder] 회원가입 flow, view 생성

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -53,7 +53,7 @@
 
 ### 3.2.1. 필터 초기화 및 다중 설정 클래스
 - 다중 설정이 필요한 이유 ?
-    - 요청 방식에 따라 다른 보안 방식이 필요하는 경우
+    - 요청 방식에 따라 다른 보안 방식이 필요하는 경우에 사용한다.
 
 - 다중 설정 시 처리 방식
     - requestMatcher 에 따라 다른 Filter 사용
@@ -95,8 +95,6 @@ public class SecuritySubConfig extends WebSecurityConfigurerAdapter {
     }
 }
 ```
-
-### 3.2.2. WebSecurity, HttpSecurity, WebSecurityConfigurerAdapter
 
 ## 3.3. Authentication
 
