--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -147,6 +147,30 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     - SpringSecurity 5.0 이전에는 기본 PasswordEncoder 가 평문을 지원하는 NoOpPasswordEncoder (현재는 Deprecated)
 
 - 생성
+    - PasswordEncoder passwordEncoder = PasswordEncoderFactories.createDelegatingPasswordEncoder();
+    - 여러 PasswordEncoder 유형을 선언한 뒤, 상황에 맞게 선택해서 사용할 수 있도록 지원하는 Encoder이다.
+
+- 암호화 포맷: {id}encodedPassword
+    - 알고리즘 종류: bcrypt, noop, pbkdf2, scrypt, sha256 (기본 포맷은 Bcrypt : {bcrypt}
+
+- 인터페이스
+    - encode(password)
+        - 패스워드 암호화
+    - matches(rawPassword: 원래 비밀번호, encodedPassword: 암호화된 비밀번호)
+        - 패스워드 비교
+ 
+- 사용자 등록기능 구현 시나리오
+    - PasswordEncoder를 사용하여 비밀번호 암호화 및 DB 저장   
+
+- 사용자 로그인을 위한 domain, service, controller viewTemplate 생성
+    - 사용자 등록을 위한 domain(Account) 생성
+    - 사용자의 등록 요청을 위한 domain(AccountDto) 생성
+    - 사용자 등록 requestMapping을 위한 controller method 생성
+        - password 암호화를 위한 PasswordEncoder 생성 및 encode 추가
+        
+    - 사용자 Entity 를 저장하는 Service, Repository 생성
+    - 사용자 회원가입처리를 위한 View 생성
+    - 회원가입 view에 접근하기 위한 URL Path에 대해서 permitAll 설정
     
 ### 4.3.2. CustomUserDetailsService
 ### 4.3.3. CustomAuthenticationProvider
