[3.3 Authentication] Authentication 생성 및 SecurityContextHolder에 저장되는 flow 정리 TODO: [4.3.2 CustomUserDetailsService] 회원가입 후 로그인 프로세스

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -173,6 +173,26 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     - 회원가입 view에 접근하기 위한 URL Path에 대해서 permitAll 설정
     
 ### 4.3.2. CustomUserDetailsService
+- UserDetailsService의 역할
+    - 사용자 정보 및 권한 정보 DB 저장
+    - 사용자 조회 인증 처리
+
+- UserDetailsService 시나리오 Flow
+    - 사용자의 정보를 DB에 저장
+    - DB에 등록된 사용자의 정보로 로그인 시 UserDetailsService 메서드 loadUserByUsername 의 진행 절차 확인
+
+- 사용자 DB 관리를 위한 기존의 인 메모리 사용자 설정 삭제
+
+```
+@Override
+protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+    String password = passwordEncoder().encode("1234");
+    auth.inMemoryAuthentication().withUser("user").password(password).roles("USER");
+    auth.inMemoryAuthentication().withUser("manager").password(password).roles("MANAGER");
+    auth.inMemoryAuthentication().withUser("admin").password(password).roles("ADMIN");
+}
+```
+
 ### 4.3.3. CustomAuthenticationProvider
 ### 4.3.4. Custom Login Form Page
 ### 4.3.5. 로그아웃 및 화면 보안 처리
