[3.4. SecurityContextHolder, SecurityContext] SecurityContextHolder의 SecurityContext 관리와 전략 정리 [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -2,8 +2,6 @@
 
 ## 3.1. Proxy
 
-![DelegatingFilterProxy & FilterChainProxy](/docs/img/flow/flow_DelegatingFilterProxy_FilterChainProxy.png)
-
 ### 3.1.1. DelegatingFilterProxy & FilterChainProxy
 - DelegatingFilterProxy & FilterChainProxy 생성 및 등록 Flow
     - SecurityFilterAutoConfiguration
@@ -118,10 +116,99 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 ## 3.4. SecurityContextHolder, SecurityContext
 
+![SecurityContext](/docs/img/flow/flow_SecurityContext.png)
+
+- SecurityContext
+    - Authentication 객체가 저장되는 보관소로 필요시 언제든지 Authentication 객체를 꺼내어 쓸 수 있도록 제공되는 클래스
+    - ThreadLocal 에 저장되어 아무 곳에서나 참조가 가능하도록 설계됨
+    - 인증이 완료되면 HttpSession 에 저장되어 어플리케이션 전반에 걸쳐 전역적인 참조가 가능하다.
+
+- SecurityContextHolder
+    - SecurityContext 객체 저장 방식
+        - MODE_THREADLOCAL: 스레드당 SecurityContext 객체를 할당, 기본값
+        - MODE_INHERITABLETHREADLOCAL: 메인 스레드와 자식 스레드에 관하여 동일한 SecurityContext를 유지
+            - 기본적으로는 메인 스레드와 자식 스레드간 영역이 달라 공유하고 있지 않음
+        - MODE_GLOBAL: 응용 프로그램에서 단 하나의 SecurityContext 를 저장 (static 변수로 저장)
+    - SecurityContextHolder.clearContext() : SecurityContext 기존 정보 초기화
+
+
+- 시나리오 정리 
+    - MainThread와 SubThread의 ThreadLocal의 영역이 독립적인 것을 확인하기 위한 시나리오
+        - SecurityContextHolder의 기본 전략 모드인 ThreadLocal과 InheritableThreadLocal 모드를 비교하여 Thread 간 SecurityContext가 관리되는 방식을 확인 
+
+```
+    @GetMapping("/")
+    public String index(HttpSession session) {
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        SecurityContext context = (SecurityContext) session.getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY);
+        Authentication sessionContext = context.getAuthentication();
+
+        return "Hello World";
+    }
+
+    @GetMapping("/thread")
+    public String thread() {
+        new Thread(
+                new Runnable() {
+                    @Override
+                    public void run() {
+                        /* ThreaLocal 모드에서는 인증 객체가 null, InheritableThreadLocal 모드의 경우 Thread간 인증 객체가 공유 가능 한 것을 확인 */
+                        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+                    }
+                }
+        ).start();
+        return "thread";
+    }
+```
+
 ### 3.4.1. SecurityContextHolder
+- SecurityContextHolder
+    - 96 Line: private static void initialize() { ... }
+        - SecurityContext 객체를 저장하는 방식
+            1. MODE_THREADLOCAL
+                - 각 Thread간 ThreadLocal에 저장되어 있는 SecurityContext는 또 다른 Thread와 독립적으로 관리한다.
+                
+            2. MODE_INHERITABLETHREADLOCAL
+                - MainThread내에 SubThread간 ThreadLocal이 공유되어 SecurityContextHolder에 접근하여 동일한 SecurityContext를 저장 및 호출할 수 있다.
+
+            3. MODE_GLOBAL : GlobalSecurityContextHolderStrategy
+        - xxxSecurityContextHolderStrategy 라는 각각의 전략 클래스명으로 SecurityContext 를 관리 
+
+- SecurityContextHolder 요약
+    1. SecurityContext 관리
+        - clearContext
+        - getContext
+        - setContext
+        - createEmptyContext
+
+    2. 세 가지 SecurityContextStrategy의 구현체를 설정 가능
+        - MODE_THREADLOCAL : ThreadLocalSecurityContextHolderStrategy
+        - MODE_INHERITABLETHREADLOCAL : InheritableThreadLocalSecurityContextHolderStrategy
+        - MODE_GLOBAL : GlobalSecurityContextHolderStrategy
 
 ### 3.4.2. SecurityContext
+- SecurityContext (interface)
 
+    - SecurityContext 객체에 접근하는 방법 2가지
+        1. SecurityContextHolder
+        2. HttpSession
+
+    - SecurityContextHolder에 있는 SecurityContext에 접근하는 방법
+        1. Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        2. HttpSession 에 있는 SecurityContext에 접근하는 방법
+            - SecurityContext context = (SecurityContext) session.getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY)
+            - Authentication authentication = context.getAuthentication();
+        
+- SecurityContextImpl (class)
+
+- SecurityContext 요약
+    1. Authentication 관리 
+        - equals
+        - hashCode
+        - toString
+        - getAuthentication
+        - setAuthentication
 
 ## 3.5. SecurityContextPersistenceFilter
 
