[3.5. SecurityContextPersistenceFilter] 시나리오 정리, TODO: Flow 작성해야함 [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -211,7 +211,135 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - setAuthentication
 
 ## 3.5. SecurityContextPersistenceFilter
+-  SecurityContext 객체의 생성, 저장, 조회
+    1. 익명 사용자를 처리하는 방식
+        - 새로운 SecurityContext 객체를 생성하여 SecurityContextHolder 에 **저장**
+        - AnonymousAuthenticationFilter에서 AnonymousAuthenticationToken 객체를 SecurityContext 에 저장
 
+    2. 익명 사용자가 인증 시
+        - 새로운 SecurityContext 객체를 생성하여 SecurityContextHolder에 **저장**
+        - form인증 방식의 UsernamePasswordAuthenticationFilter 에서 인증 성공 후 SecurityContext 에 UsernamePasswordAuthenticationToken 객체를 SecurityContext에 저장
+        - 인증이 최종 완료되면 Session 에 SecurityContext을 저장
+
+    3. 인증 후
+        - HttpSession에서 SecurityContext 내에 Authentication을 **꺼내어** SecurityContextHolder에 **저장**
+        - SecurityContext 안에 Authentication 객체가 존재하면 계속 인증을 유지
+        
+    4. 최종 응답 시 공통
+        - SecurityContextHolder.clearContext()
+            - 매 요청마다 SecurityContextHolder의 SecurityContext를 비워준다.
+
+- 익명 사용자를 처리하는 Flow 
+    -  SecurityContextPersistenceFilter
+        - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
+            - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
+            - HttpSessionSecurityContextRepository
+                - 108 Line: public SecurityContext loadContext(httpRequestResponseHolder requestResponseHolder) { ... }
+                    - request, response, session을 생성 session으로부터 SecurityContext의 존재여부를 확인 및 조회
+                - 120 Line: context = generateNewContext();
+                    - 익명의 사용자는 인증한 이력이 없기 때문에 securityContext를 생성
+                    
+                    - 224 Line: protected SecurityContext generateNewContext()
+                    - 225 Line: SecurityContextHolder.createEmptyContext()
+                        - SecurityContextHolder
+                            - 161 Line: return strategy.createEmptyContext();
+                                - InheritableThreadLocalSecurityContextHolderStrategy
+                                    - 60 Line: return new SecurityContextImpl();
+                                        - SecurityContext를 생성
+                                    - 54 Line: public void setContext(SecurityContext context);
+                                    - 56 Line: contextHolder.set(context);
+                                        - SecurityContext를 저장
+
+        - 103 Line: SecurityContextHolder.setContext(contextBeforeChainExecution);
+            - 익명 사용자의 요청 정보로 인하여 생성된 SecurityContext를 SecurityContextHolder에 저장
+        - 105 Line: chain.doFilter(holder.getRequest(), holder.getResponse);
+            - SecurityContext를 생성 및 저장한 뒤 다음 필터로 이동
+
+        - AnonymousAuthenticationFilter
+            - 95 Line: if(SecurityContextHolder.getContext().getAuthentication() == null) { ... }
+                - 익명 사용자의 접근으로 인하여 Authentication 값이 null 이기 때문에 익명 사용자용 인증처리 로직이 실행
+            - 114 Line: AnonymousAuthenticationToken auth = new AnonymousAuthenticationFilter(key, principal, authorities);
+                - 익명 객체 토큰을 생성
+            - 96 Line: SecurityContextHolder.getContext.setAuthentication(createAuthentication((HttpServletRequest) req));
+                - 바로 위에서 만든 익명 객체 토큰 값으로 AnonymousAuthentication을 생성하여 SecuriryContextHodler의 SecurityContext에 Authentication으로 저장
+                
+        - 113 Line: SecurityContextHolder.clearContext();
+            - 익명 사용자의 경우 SecurityContext를 별도로 저장하지 않고 응답 하기전에 SecurityContextHolder 내에 SecurityContext를 삭제한다.
+            - **매 요청바다 SecurityContext를 생성, SecurityContextHolder에 저장하여 Filter간 인증 정보를 확인하기 때문에 계속 저장할 필요가 없음**
+
+        - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
+        - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
+            
+- 인증 사용자를 처리하는 Flow
+    -  SecurityContextPersistenceFilter
+        - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
+            - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
+            - HttpSessionSecurityContextRepository
+                - 108 Line: public SecurityContext loadContext(httpRequestResponseHolder requestResponseHolder) { ... }
+                    - request, response, session을 생성 session으로부터 SecurityContext의 존재여부를 확인 및 조회
+                - 120 Line: context = generateNewContext();
+                    - 처음 인증하는 사용자는 인증한 이력이 없기 때문에 securityContext를 생성
+                    
+                    - 224 Line: protected SecurityContext generateNewContext()
+                    - 225 Line: SecurityContextHolder.createEmptyContext()
+                        - SecurityContextHolder
+                            - 161 Line: return strategy.createEmptyContext();
+                                - InheritableThreadLocalSecurityContextHolderStrategy
+                                    - 60 Line: return new SecurityContextImpl();
+                                        - SecurityContext를 생성
+                                    - 54 Line: public void setContext(SecurityContext context);
+                                    - 56 Line: contextHolder .set(context);
+                                        - SecurityContext를 저장
+        - 103 Line: SecurityContextHolder.setContext(contextBeforeChainExecution);
+                - 익명 사용자의 요청 정보로 인하여 생성된 SecurityContext를 SecurityContextHolder에 저장
+        - 105 Line: chain.doFilter(holder.getRequest(), holder.getResponse);
+            - SecurityContext를 생성 및 저장한 뒤 다음 필터로 이동
+            
+        - ... 인증 필터가 인증 처리를 한 뒤 인증 성공 후 
+
+        - AbstractAuthenticationProcessingFilter
+            -  307 Line: protected void successfulAuthentication( ... ) { ... }
+                - 인증 필터에서 인증 처리 후 인증 성공 시 처리되는 메서드
+                - 316 Line: SecurityContextHolder.getContext().setAuthentication(authRequest);
+                    - 인증이 성공된 인증 객체를 SecurityContext에 저장
+                    
+        - HttpSessionSecurityContextRepository
+            - 344 Line: protected void saveContext (SecurityContext context) { ... }
+                - 인증이 최종 완료되면 Session에 SecurityContext를 저장
+            - 349 Line: if(authentication == null || trustResolver.isAnonymous(authentication)) { ... }
+                - 익명 사용자가 아닌경우
+            - 368 Line: if(httpSession != null) { ... }
+            - 373 Line: httpSession.setAttribute(springSecurityContextKey, context);
+                -  HttpSession 에 SecurityContext를 저장
+        - 113 Line: SecurityContextHolder.clearContext();
+            - 응답 하기전에 SecurityContextHolder 내에 SecurityContext를 삭제한다.
+            - **매 요청바다 SecurityContext를 생성, SecurityContextHolder에 저장하여 Filter간 인증 정보를 확인하기 때문에 계속 저장할 필요가 없음**
+
+        - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
+        - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
+        
+        * 정상 인증 처리된 Authentication은 SecurityContext에 저장되어 Session이 관리하게 되는 형태
+
+- 정상 인증 처리된 사용자가 요청하는 Flow
+    -  SecurityContextPersistenceFilter
+        - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
+            - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
+            - HttpSessionSecurityContextRepository
+                - 108 Line: public SecurityContext loadContext(httpRequestResponseHolder requestResponseHolder) { ... }
+                    - request, response, session을 생성 session으로부터 SecurityContext의 존재여부를 확인 및 조회
+        - 103 Line: SecurityContextHolder.setContext(contextBeforeChainExecution);
+                - 인증된 사용자의 정보는 SecurityContext에 이미 존재하여 현재 필터에서 사용될 SecurityContextHolder에 저장되어 공유할 수 있도록 한다.
+ 
+        - 105 Line: chain.doFilter(holder.getRequest(), holder.getResponse);
+            - 공유할 SecurityContext를 Holder에 저장한 뒤 다음 필터로 이동
+    
+        - 113 Line: SecurityContextHolder.clearContext();
+            - 응답 하기전에 SecurityContextHolder 내에 SecurityContext를 삭제한다.
+            - **매 요청바다 SecurityContext를 생성, SecurityContextHolder에 저장하여 Filter간 인증 정보를 확인하기 때문에 계속 저장할 필요가 없음**
+
+        - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
+        - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
+        
 ## 3.6. AuthenticationManager
 
 ## 3.6.1. AuthenticationManager Basic
