[3.5. SecurityContextPersistenceFilter] anonymous, unauthentication 시나리오 정리, TODO: 정상 인증 처리 사용자 flow [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -270,7 +270,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
         - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
             
-- 인증 사용자를 처리하는 Flow
+- 인증 요청 사용자를 처리하는 Flow
     -  SecurityContextPersistenceFilter
         - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
             - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
@@ -279,7 +279,6 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
                     - request, response, session을 생성 session으로부터 SecurityContext의 존재여부를 확인 및 조회
                 - 120 Line: context = generateNewContext();
                     - 처음 인증하는 사용자는 인증한 이력이 없기 때문에 securityContext를 생성
-                    
                     - 224 Line: protected SecurityContext generateNewContext()
                     - 225 Line: SecurityContextHolder.createEmptyContext()
                         - SecurityContextHolder
@@ -288,10 +287,10 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
                                     - 60 Line: return new SecurityContextImpl();
                                         - SecurityContext를 생성
                                     - 54 Line: public void setContext(SecurityContext context);
-                                    - 56 Line: contextHolder .set(context);
+                                    - 56 Line: contextHolder.set(context);
                                         - SecurityContext를 저장
         - 103 Line: SecurityContextHolder.setContext(contextBeforeChainExecution);
-                - 익명 사용자의 요청 정보로 인하여 생성된 SecurityContext를 SecurityContextHolder에 저장
+                - 인증되지 않은 사용자의 요청 정보로 인하여 생성된 SecurityContext를 SecurityContextHolder에 저장
         - 105 Line: chain.doFilter(holder.getRequest(), holder.getResponse);
             - SecurityContext를 생성 및 저장한 뒤 다음 필터로 이동
             
