[3.5. SecurityContextPersistenceFilter] anonymous, unauthentication 시나리오 정리, TODO: 정상 인증 처리 사용자 flow [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -211,6 +211,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - setAuthentication
 
 ## 3.5. SecurityContextPersistenceFilter
+
 -  SecurityContext 객체의 생성, 저장, 조회
     1. 익명 사용자를 처리하는 방식
         - 새로운 SecurityContext 객체를 생성하여 SecurityContextHolder 에 **저장**
@@ -228,6 +229,8 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
     4. 최종 응답 시 공통
         - SecurityContextHolder.clearContext()
             - 매 요청마다 SecurityContextHolder의 SecurityContext를 비워준다.
+
+![SecurityContextPersistenceFilter_AnonymousCase](/docs/img/flow/flow_SecurityContextPersistenceFilter_AnonymousCase.png)
 
 - 익명 사용자를 처리하는 Flow 
     -  SecurityContextPersistenceFilter
@@ -270,6 +273,8 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
         - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
             
+![SecurityContextPersistenceFilter_UnAuthenticationUser](/docs/img/flow/flow_SecurityContextPersistenceFilter_UnAuthenticationUser.png)
+
 - 인증 요청 사용자를 처리하는 Flow
     -  SecurityContextPersistenceFilter
         - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
