[3.6. AuthenticationManager] AuthenticationManager 기본 Flow 정리, TODO: debug flow 정리 필요 [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -116,8 +116,6 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 ## 3.4. SecurityContextHolder, SecurityContext
 
-![SecurityContext](/docs/img/flow/flow_SecurityContext.png)
-
 - SecurityContext
     - Authentication 객체가 저장되는 보관소로 필요시 언제든지 Authentication 객체를 꺼내어 쓸 수 있도록 제공되는 클래스
     - ThreadLocal 에 저장되어 아무 곳에서나 참조가 가능하도록 설계됨
@@ -161,6 +159,8 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         return "thread";
     }
 ```
+
+![SecurityContext](/docs/img/flow/flow_SecurityContext.png)
 
 ### 3.4.1. SecurityContextHolder
 - SecurityContextHolder
@@ -230,9 +230,7 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         - SecurityContextHolder.clearContext()
             - 매 요청마다 SecurityContextHolder의 SecurityContext를 비워준다.
 
-![SecurityContextPersistenceFilter_AnonymousCase](/docs/img/flow/flow_SecurityContextPersistenceFilter_AnonymousCase.png)
-
-- 익명 사용자를 처리하는 Flow 
+- 익명 사용자를 처리하는 Flow 정리
     -  SecurityContextPersistenceFilter
         - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
             - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
@@ -272,10 +270,12 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
         - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
         - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
-            
-![SecurityContextPersistenceFilter_UnAuthenticationUser](/docs/img/flow/flow_SecurityContextPersistenceFilter_UnAuthenticationUser.png)
 
-- 인증 요청 사용자를 처리하는 Flow
+- 익명 사용자를 처리하는 Flow
+
+![SecurityContextPersistenceFilter_AnonymousCase](/docs/img/flow/flow_SecurityContextPersistenceFilter_AnonymousCase.png)
+
+- 인증 요청 사용자를 처리 flow 정리
     -  SecurityContextPersistenceFilter
         - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
             - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
@@ -324,7 +324,11 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
         
         * 정상 인증 처리된 Authentication은 SecurityContext에 저장되어 Session이 관리하게 되는 형태
 
-- 정상 인증 처리된 사용자가 요청하는 Flow
+- 인증 요청 사용자를 처리하는 Flow
+
+![SecurityContextPersistenceFilter_UnAuthenticationUser](/docs/img/flow/flow_SecurityContextPersistenceFilter_UnAuthenticationUser.png)
+
+- 정상 인증 처리된 사용자가 요청 flow 정리
     -  SecurityContextPersistenceFilter
         - 100 Line: SecurityContext contextBeforeChainExecution = repo.loadContext (holder);
             - 사용자가 이전에 인증에 성공하여 securityContext를 session에 저장한 정보가 있는지 확인
@@ -343,8 +347,25 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
         - 114 Line: repo.saveContext(contextAfterChainExecution, holder.getRequest(), holder.getResponse());
         - 134 Line: public void saveContext(SecurityContext context, HttpServletRequest request, HttpServletResponse response) { ... }
+
+- 인증 처리된 사용자의 요청 Flow
+
+![SecurityContextPersistenceFilter_AuthenticationUser](/docs/img/flow/flow_SecurityContextPersistenceFilter_AuthenticationUser.png)
+
+## 3.6. Authentication
+
+
+- Authentication 인증 Flow Debug
+    - UsernamePasswordAuthenticationFilter
+    - AuthenticationManager
+    - AuthenticationProvider
+        - UserDetailsService
+            - Repository
         
-## 3.6. AuthenticationManager
+
+- Authentication 인증 Flow 
+
+![AuthenticationManager](/docs/img/flow/flow_AuthenticationManager.png)
 
 ## 3.6.1. AuthenticationManager Basic
 
@@ -371,8 +392,4 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 ### 3.9.4. AccessDecisionVoter Advance
 
-
-## 3.10. Authentication Flow
-
-
-## 3.11 스프링 시큐리티 필터 및 아키텍처 정리
+## 3.10 스프링 시큐리티 필터 및 아키텍처 정리
