[3.6. AuthenticationManager] AuthenticationManager 기본 Flow 정리, debug flow 정리 끝 [4.3.3 CustomAuthenticationProvider] 사용자 정의 AuthenticationProvider 코드 작성함, TODO FLOW 정리 및 내용 요약하기

--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -354,14 +354,40 @@ Authentication authentication = SecurityContextHolder.getContext().getAuthentica
 
 ## 3.6. Authentication
 
-
 - Authentication 인증 Flow Debug
+
     - UsernamePasswordAuthenticationFilter
-    - AuthenticationManager
-    - AuthenticationProvider
-        - UserDetailsService
-            - Repository
-        
+        - 인증 필터
+        - SecurityContext에 인증 객체(Authentication)을 저장
+        - 89 Line: UsernamePasswordAuthenticationToken authRequest = new UsernamePasswordAuthenticationToken(username, password);
+            - 요청 정보를 담은 인증 토큰으로 생성, 인증 요청을 할 수 있는 파라미터 타입으로 변환
+        - 95 Line: return this.getAuthenticationManager().authenticate(authRequest);
+            - 인증 토큰을 AuthenticationManager에 전달하여 인증 요청
+ 
+        - AuthenticationManager (Interface)
+            - 인증의 전반적인 관리
+            - 현재 요청의 인증에 대해서 알맞은 Provider를 찾아 인증 처리 위임
+
+            - AuthenticationProvider (ProviderManager)
+                - UserDetails, authorities를 인증 토큰을 인증객체에 담아 반환
+                - 199 Line: result = provider.authenticate(authentication);
+                    - 인증 요청에 맞는 AuthenticationProvider를 선택하여 인증처리를 실시함
+
+                    - AbstractUserDetailsAuthenticationProvider
+                        - 인증 처리 메서드가 존재하는 DaoAuthenticationProvider의 상위 클래스
+                        - 126 Line: public Authentication authenticate(Authentication authentication)
+                            - 실제 인증 처리 수행이 되는 메서드
+                        - 174 Line: user = retrieveUser(username, (UsernamePasswordAuthenticationToken) authentication);
+                            - 사용자를 검색
+
+                            - DaoAuthenticationProvider
+                                - 103 Line: protected final UserDetails retrieveUser(String username, UsernamePasswordAuthenticationToken authentication) throws AuthenticationException { ... }
+                                    - 사용자 검색 요청하는 메서드
+
+                                - InMemoryUserDetailsManager
+                                    - 151 Line: public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException { ... }
+                                        - username을 통해 메모리에 저장되어 있는 사용자 정보를 요청
+                                        - UserDetails 타입으로 반환
 
 - Authentication 인증 Flow 
 
